# clickshot

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  tox.ini
.github/: dependabot.yml
clickshot/: __init__.py  config.py  element.py  image.py  keyboard.py  locater.py  matchers.py  mouse.py  region.py  retry.py  screen_grabber.py  screenshot.py  types.py
test/: conftest.py  test_config.py  test_element.py  test_image.py  test_locater.py  test_matchers.py  test_region.py  test_retry.py  test_screen_grabber.py  test_screenshot.py
