[tool.poetry]
name = "clickshot"
version = "0.4.0"
description = "A framework for easier cross-platform GUI testing."
authors = ["sneakypete81 <sneakypete81@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/sneakypete81/clickshot"
keywords = ["testing", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing"
]

[tool.poetry.dependencies]
python = "^3.6"

mss = "^4.0"
numpy = "^1.17"
opencv-python = "^4.1"
pynput = "^1.4"


[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8"
PyHamcrest = "^1.10"
pytest = "^6.2"
pytest-cov = "^2.11"
pytest-mock = "^1.13"
tox = "^3.21"
mypy = "^0.740.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
